--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,8 +18,12 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-light" href="/Livro/Cadastro" id="menuLivros">Livros</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-light dropdown-toggle" data-toggle="dropdown" href="#">Livros</a>
+                            <div class="dropdown-menu" aria-labelledby="menuLivros">
+                                <a class="dropdown-item" href="/Livro/Listagem">Listagem</a>
+                                <a class="dropdown-item" href="/Livro/Cadastro">Cadastro</a>
+                            </div>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link text-light dropdown-toggle" data-toggle="dropdown" href="#">Emprestimo</a>
@@ -27,6 +31,12 @@
                                 <a class="dropdown-item" href="/Emprestimo/Listagem">Listagem</a>
                                 <a class="dropdown-item" href="/Emprestimo/Cadastro">Cadastro</a>
                             </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="/Usuario/listaDeUsuarios" id="menuUsuario">Usuários</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="/Usuario/Sair" id="menuUsuario">Logout</a>
                         </li>
                     </ul>
                 </div>
@@ -41,7 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - Biblioteca - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - Biblioteca - <a asp-area="" asp-controller="Home" asp-action="Privacy">Todos os direitos reservados</a>
         </div>
     </footer>
 
